--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,62 +1,51 @@
 import /init.recovery.teei_daemon.rc
 
 on fs
-    #wait /dev/block/platform/soc/${ro.boot.bootdevice}
-    #symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     install_keyring
 
 on fs
     start hwservicemanager
     start servicemanager
 
-# Separate copy needed to use /sbin/linker64 instead of /system/bin/linker64
-#service teei_daemon /sbin/teei_daemon
-#    user root
-#    group root
-#    disabled
-#    seclabel u:r:recovery:s0
-
-service hwservicemanager /sbin/hwservicemanager
+service hwservicemanager /system/bin/hwservicemanager
     user root
     group root readproc
     disabled
     onrestart setprop hwservicemanager.ready false
     seclabel u:r:recovery:s0
 
-service servicemanager /sbin/servicemanager
+service servicemanager /system/bin/servicemanager
     user root
     group root readproc
     disabled
     seclabel u:r:recovery:s0
 
-service keystore_auth /sbin/keystore_auth
+service keystore_auth /system/bin/keystore_auth
     oneshot
     user system
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keystore /sbin/keystore /tmp/misc/keystore
+service keystore /system/bin/keystore /tmp/misc/keystore
     user root
     group root drmrpc readproc
     disabled
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /sbin/android.hardware.gatekeeper@1.0-service
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-4-0 /sbin/android.hardware.keymaster@4.0-service.beanpod
+service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
     user root
     group root drmrpc
     disabled
     seclabel u:r:recovery:s0
 
-####
 on property:hwservicemanager.ready=true
-    #start teei_daemon
     start keymaster-4-0
     start gatekeeper-1-0
 
@@ -80,40 +69,6 @@ on property:twrp.decrypt.done=true && property:twrp.all.users.decrypted=true
     stop gatekeeper-1-0
     stop servicemanager
     stop hwservicemanager
-
-
-# fix magisk.zip install
-service fixmagisk /init.magisk.sh
-    #oneshot
-    #disabled
-    user root
-    group root
-    seclabel u:r:recovery:s0
-
-
-
-
-
-
-
-# read ro.build.fingerprint from system, setprop it. for ota
-service fingerprintid /init.fingerprintid.sh
-    oneshot
-    disabled
-    user root
-    group root
-    seclabel u:r:recovery:s0
-
-on early-init
-    setprop recovery.perf.mode 1
-    start fingerprintid
-
-on boot
-    setprop recovery.perf.mode 0
-    # Enable double-tap to wake
-    #write /proc/touchpanel/double_tap_enable 1
-    # Enable OTG
-    #write /sys/class/power_supply/usb/otg_switch 1
 
 on property:recovery.perf.mode=1
     write /sys/devices/system/cpu/cpu1/online 1
